# amr-ss25-projects-stark_syndicate_m42

./: README.md
Robile/docs/source/: getting_started.rst
Robile/docs/source/Hardware/: index.rst  robile_switch_on.rst
Robile/docs/source/Tutorial/: Demo Communication.rst  Demo Localization.rst  Demo Mapping.rst  Demo Simulation.rst  index.rst
install/: local_setup.sh  setup.sh
install/robile_autonomous/lib/robile_autonomous/: A_star_planner  navigation_controller  potential_field_planner
install/robile_autonomous/share/robile_autonomous/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robile_autonomous/share/robile_autonomous/launch/: slam.launch.py
install/robile_bringup/share/robile_bringup/: package.sh
install/robile_control_simple/share/robile_control_simple/: package.sh
install/robile_description/share/robile_description/: local_setup.sh  package.sh
install/robile_gazebo/share/robile_gazebo/: local_setup.sh  package.sh
install/robile_interfaces/share/robile_interfaces/: local_setup.sh  package.sh
install/robile_navigation/share/robile_navigation/: local_setup.sh  package.sh
install/robile_navigation/share/robile_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
install/robile_reach_goal/share/robile_reach_goal/: package.sh
install/robile_slam/lib/robile_slam/: exploration_node  global_planner_node  mcl  nav_stack  particle_filter_node  potential_field_node  updated_global_planner  waypoint_follower_node
install/robile_slam/share/robile_navigation/maps/: dynamic_world_map.yaml  (+5 more)
install/robile_slam/share/robile_slam/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robile_autonomous/: setup.cfg  setup.py
robile_autonomous/config/: ekf.yaml
robile_autonomous/launch/: navigation.launch.py  slam_with_robile.launch.py
robile_autonomous/robile_autonomous/: A_star.py  A_star_planner.py  potential_field_planner.py
robile_description/: CMakeLists.txt  README.md
robile_description/gazebo/: gazebo_ros_planar_move.xacro
robile_gazebo/: CMakeLists.txt  README.md
robile_gazebo/launch/: gazebo_4_wheel.launch.py
robile_interfaces/: CMakeLists.txt
robile_navigation/: CMakeLists.txt
robile_navigation/config/: robile_ros2_nav.rviz
robile_navigation/scripts/: robile_localisation_kalman.py
robile_slam/: package.xml  setup.cfg  setup.py
robile_slam/config/: localization_config.rviz  mapping_config.rviz
robile_slam/launch/: map_server.launch.py  nav_launch.launch.py  navigation.launch.py  robile_slam.launch.py  test_global_planner.launch.py  test_particle_filter.launch.py
robile_slam/maps/: dynamic_world_map.pgm  env_map.pgm  lab_map.pgm  latest_map.pgm  latest_map.yaml  map_amr_proj_test.yaml
robile_slam/robile_slam/: exploration_node.py  monte_carlo_pf_node.py  navigation_stack.py  potential_field_node.py
robile_slam/scripts/: auto_pick_start_goal.py  check_map_pose.py  test_mcl_publisher.py
robile_slam/worlds/: dynamix.world  dynamix_world
(+10 files in other folders)
